Fixed H1 Out of Screen

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -29,7 +29,7 @@ blockquote {
 }
 
 h1 {
-  font-size: 4rem !important;
+  font-size: 3.5rem !important;
 }
 
 h3 {
